# Variance

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: common.rs  fail.rs  fail_contravariant.rs  fail_contravariant.stderr  fail_covariant.rs  fail_covariant.stderr  fail_invariant_contravariant.rs  fail_invariant_contravariant.stderr  fail_invariant_covariant.rs  fail_invariant_covariant.stderr
