[package]
name = "type-variance"
description = "Marker traits for subtype variance"
version = "0.1.0"
authors = ["Nathan Wiebe Neufeldt <wn.nathan@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://gitlab.com/nwn/variance"
readme = "README.md"
keywords = ["variance", "subtype", "marker"]
categories = ["rust-patterns", "no-std"]
autotests = false

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "failure_tests"
path = "tests/fail.rs"
